--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@ button:hover{
 
 <div class="container">
 	<div class="text">
-		<h1>Bem-Vindo a calculadora PósOrdem</h1>
+		<h1>Bem-Vindo à calculadora PósOrdem</h1>
 	    <h2>Calculadora Pós-Ordem</h2>
 	</div>	
     <input type="text" id="expressao" placeholder="Ex: 3 4 +">
